@@ -1,6 +1,6 @@
 % File src/library/base/man/row.names.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2010 R Core Team
+% Copyright 1995-2018 R Core Team
 % Distributed under GPL 2 or later
 
 \name{row.names}
@@ -21,11 +21,18 @@
 }
 \usage{
 row.names(x)
-row.names(x) <- value
+row.names(x, make.names=FALSE) <- value
 }
 \arguments{
   \item{x}{object of class \code{"data.frame"}, or any other class for
     which a method has been defined.}
+  \item{make.names}{\code{\link{logical}}, i.e., one of \code{FALSE, NA, TRUE},
+    indicating what should happen if the specified row names, i.e.,
+    \code{value}, are invalid, e.g., duplicated or \code{NA}.  The default
+    (is back compatible), \code{FALSE}, will signal an error, where
+    \code{NA} will \dQuote{automatic} row names and \code{TRUE} will call
+    \code{\link{make.names}(value, unique=TRUE)} for constructing valid
+    names.}
   \item{value}{an object to be coerced to character unless an integer
     vector.  It should have (after coercion) the same length as the
     number of rows of \code{x} with no duplicated nor missing values.
