@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2018-02-28 r74309) -- "Unsuffered Consequences"
+R Under development (unstable) (2018-03-07 r74368) -- "Unsuffered Consequences"
 Copyright (C) 2018 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -786,8 +786,8 @@ aa: quote(B(a = x + y, b = 3))
  --> checking list(*): Ok
 --=--=--=--=--
 args: structure(list(i = c(1, 3, 4, 5, 6, 7, 8, 1), j = c(2, 9, 6, 
-7, 8, 9, 10, 2), x = c(7, 14, 21, 28, 35, 42, 49, 2)), row.names = c(NA, 
--8L), class = "data.frame")
+7, 8, 9, 10, 2), x = c(7, 14, 21, 28, 35, 42, 49, 2)), class = "data.frame", row.names = c(NA, 
+-8L))
  --> checking list(*): Ok
 --=--=--=--=--
 attrS4: function (x) 
@@ -1298,5 +1298,5 @@ Summary of (a total of 9) warning messages:
 > 
 > ## at the very end
 > cat('Time elapsed: ', proc.time() - .proctime00,'\n')
-Time elapsed:  1.389 0.084 1.511 0 0 
+Time elapsed:  0.813 0.14 0.956 0 0 
 > 
