@@ -732,13 +732,12 @@ stopifnot(diff(sort(y)) > 0)
 ## order() and hence sort() failed here badly for a while around 2015-04-16
 
 
-## NAs in data frame names:
-dn <- list(c("r1", NA), c("V", NA))
+## NAs in data frame names (but *not* in row.names; that's really wrong):
+dn <- list(c("r1", "r2"), c("V", NA))
 d11 <- as.data.frame(matrix(c(1, 1, 1, 1), ncol = 2, dimnames = dn))
 stopifnot(identical(names(d11), dn[[2]]),
           identical(row.names(d11), dn[[1]]))
 ## as.data.frame() failed in R-devel for a couple of hours ..
-## note that format(d11) does fail currently, and hence print(), too
 
 
 ## Ensure  R -e ..  works on Unix
