@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2018-02-28 r74309) -- "Unsuffered Consequences"
+R Under development (unstable) (2018-03-07 r74365) -- "Unsuffered Consequences"
 Copyright (C) 2018 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -5810,16 +5810,19 @@ data frame with 0 columns and 4 rows
 > d0 <- d1 <- data.frame(1:4, row.names=1:4)
 > row.names(d0) <- NULL
 > dput(d0)
-structure(list(X1.4 = 1:4), row.names = c(NA, -4L), class = "data.frame")
+structure(list(X1.4 = 1:4), class = "data.frame", row.names = c(NA, 
+-4L))
 > dput(d1)
-structure(list(X1.4 = 1:4), row.names = c(NA, 4L), class = "data.frame")
+structure(list(X1.4 = 1:4), class = "data.frame", row.names = c(NA, 
+4L))
 > identical(d0, d1)
 [1] TRUE
 > all.equal(d0, d1)
 [1] TRUE
 > row.names(d1) <- as.character(1:4)
 > dput(d1)
-structure(list(X1.4 = 1:4), row.names = c("1", "2", "3", "4"), class = "data.frame")
+structure(list(X1.4 = 1:4), class = "data.frame", row.names = c("1", 
+"2", "3", "4"))
 > identical(d0, d1)
 [1] FALSE
 > all.equal(d0, d1)
